Finished with the analytics tab
